appId: com.bu_abd.minicap_concordia_campus_guide_app
---
- clearState
- launchApp

# Home screen verification
- assertVisible: "Link to SGW"
- assertVisible: "Link to LOY"

# SGW Campus flow
- tapOn: "Link to SGW"
- assertVisible: "SGW map"

# Return to home
- back

# Loyola Campus flow
- tapOn: "Link to LOY"
- assertVisible: "Loyola map"
# Map interactions
- swipe:
    start: 50%, 70%
    end: 50%, 30%
    duration: 1000
- swipe:
    start: 50%, 30%
    end: 50%, 70%
    duration: 1000

# Final return
- back
